man-db (2.6.0.2-3) UNRELEASED; urgency=low

  * Honour CFLAGS and LDFLAGS values set by dpkg-buildflags.
  * Discard stderr from dpkg-query in cron jobs (LP: #783903).
  * Make man-db Multi-Arch: foreign.

 -- Colin Watson <cjwatson@debian.org>  Mon, 05 Sep 2011 11:24:07 +0100

man-db (2.6.0.2-2) unstable; urgency=low

  * Add debconf translations:
    - Serbian (thanks, Zlatan Todoric; closes: #635062).
    - Serbian (Latin) (thanks, Zlatan Todoric; closes: #635063).

 -- Colin Watson <cjwatson@debian.org>  Sat, 23 Jul 2011 11:27:50 +0100

man-db (2.6.0.2-1) unstable; urgency=low

  * New upstream release:
    - Fix a segfault when scanning links to empty pages (closes: #622104).
    - Once we've seen at least one record in a page's NAME section, ignore
      any further records that don't include a whatis description, as they
      tend to be noise.
  * Remove unnecessary .la files (closes: #622443).

 -- Colin Watson <cjwatson@debian.org>  Wed, 13 Apr 2011 12:27:13 +0100

man-db (2.6.0.1-1) unstable; urgency=low

  * New upstream release, fixing test failures in 2.6.0 (closes: #621867):
    - Ensure that the target of a symlink or .so chain is always recorded as
      a real page.
    - Read a user-specified configuration file even if HOME is unset.

 -- Colin Watson <cjwatson@debian.org>  Sun, 10 Apr 2011 23:09:47 +0100

man-db (2.6.0-1) unstable; urgency=low

  * New upstream release:
    - Search the full manpath when expanding .so directives in manual pages.
      As part of this, '.so name.1' should now work as well as '.so
      man1/name.1' (closes: #503472, LP: #411534).
    - Handle roff named glyphs and perldoc strings in NAME sections (closes:
      #601025).
    - Don't start a pager if stdout is not a tty.
    - Allow passing multiple sections to whatis and apropos (closes:
      #571285).
    - Provide byte positions in manconv errors (closes: #562789).
    - Make mandb error output neater when stderr is not a tty.