@@ -3,7 +3,7 @@ Section: doc
 Priority: important
 Maintainer: Colin Watson <cjwatson@debian.org>
 Standards-Version: 3.8.2
-Build-Depends: dpkg (>= 1.15.7), debhelper (>= 7.2.3), flex, groff, libgdbm-dev, po4a, zlib1g-dev, libpipeline-dev (>= 1.1.0), hardening-includes, gettext, pkg-config
+Build-Depends: dpkg (>= 1.16.1~), debhelper (>= 8.9.0~), flex, groff, libgdbm-dev, po4a, zlib1g-dev, libpipeline-dev (>= 1.1.0), gettext, pkg-config
 Homepage: http://man-db.nongnu.org/
 
 Package: man-db
