@@ -7,15 +7,14 @@ DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 dtmp    = debian/man-db
 
-include /usr/share/hardening-includes/hardening.make
+export DEB_BUILD_MAINT_OPTIONS := hardening=+all
 
-CFLAGS := $(shell dpkg-buildflags --get CFLAGS) $(HARDENING_CFLAGS)
-LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS) $(HARDENING_LDFLAGS)
-
-# --libexecdir still needed due to #541458
+# --libdir and --libexecdir are set here because debhelper defaults to using
+# multiarch paths at compat level 9, which is a reasonable choice in general
+# but unnecessary here.
 override_dh_auto_configure:
-	CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" dh_auto_configure -- \
-		    --libexecdir=\$${libdir} \
+	dh_auto_configure -- \
+	            --libdir=\$${prefix}/lib --libexecdir=\$${libdir} \
 	            --enable-setuid --enable-undoc='man 7 undocumented' \
 	            --with-device=latin1 --enable-mb-groff \
 	            --with-config-file=/etc/manpath.config \
