@@ -1,8 +1,9 @@
 man-db (2.6.0.2-3) UNRELEASED; urgency=low
 
-  * Honour CFLAGS and LDFLAGS values set by dpkg-buildflags.
   * Discard stderr from dpkg-query in cron jobs (LP: #783903).
   * Make man-db Multi-Arch: foreign.
+  * Upgrade to debhelper v9 and its new arrangements for honouring
+    dpkg-buildflags output.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 05 Sep 2011 11:24:07 +0100
 
